compiler-core/src/parse/snapshots/gleam_core__parse__tests__case_list_pattern_after_spread.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    case [1, 2, 3] {\n        [1, .., last] -> 0\n        _ -> 0\n    }\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:4:17
  │
4 │         [1, .., last] -> 0
  │                 ^^^^ Invalid pattern

I was expecting the end of the list.
The spread pattern precesing this consumes the remaining elements of the list
therefore there is nothing left to match.
